forgot to commit my changes

--- a/index.html
+++ b/index.html
@@ -10,10 +10,56 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="wrapper">
+    <header class="header">
+        <div class="header_logo">
+            <button class="header_btn"><svg class="logo_ico"></svg>
+            <use></use>Chowdeck</button>
+        </div>
+
+        <nav class="header_nav">
+            <ul class="nav_list">
+                <li class="nav_item"><a href="" class="nav_link">Company</a></li>
+                <li class="nav_item"><a href="" class="nav_link">FAQs</a></li>
+                <li class="nav_item"><a href="" class="nav_link">Blog</a></li>
+                <li class="nav_item"><a href="" class="nav_link">Contact</a></li>
+            </ul>
+        </nav>
+
+        <div class="header_shop_block">
+            <div class="shop_block">
+                <a href="" class="shop_link">
+                    <svg class="shop_ico">
+                        <use></use>
+                    </svg>
+                </a>
+            </div>
+
+            <div class="shop_main_ico">
+                <svg class="shop_ico"></svg>
+            </div>
+        </div>
+    </header>
+
+    <section class="jeun">
+        <div class="jeun_block">
+            <h1 class="jeun_title">Se o ti jeun?</h1>
+        </div>
+
+        <div class="jeun_btn_block">
+            <button class="jeun_btn"><svg class="jein_ico"></svg>Download on Google Play</button>
+            <button class="jeun_btn"><svg class="jein_ico"></svg>Download on App Store</button>
+        </div>
+
+        <div class="jeun_ico_block">
+            <svg class="jeun_ico"></svg>
+            <svg class="jeun_ico"></svg>
+        </div>
+    </section>
+</div>
 </body>
 </html>
