added some changes

--- a/index.html
+++ b/index.html
@@ -60,6 +60,34 @@
             <svg class="jeun_ico"></svg>
         </div>
     </section>
+
+    <section class="try">
+        <div class="try_upper_block">
+            <ul class="try_list">
+                <li class="try_item"><a href="" class="try_link">customer</a></li>
+                <li class="try_item"><a href="" class="try_link">Vendors</a></li>
+                <li class="try_item"><a href="" class="try_link">Riders</a></li>
+            </ul>
+        </div>
+
+        <div class="try_middle_block">
+            <h1 class="try_title">Try the App</h1>
+            <p class="try_text">Have meals delivered to you within minutes from a wide variety of restaurants ranging from African to Continental cuisines to satisfy your cravings.</p>
+        </div>
+
+        <div class="try_icons_block">
+            <svg class="try_ico">
+                <use></use>
+            </svg>
+            <svg class="try_ico">
+                <use></use>
+            </svg>
+        </div>
+
+        <div class="try_image_block">
+            <img src="./images/try.jpg" alt="photo" class="try_image">
+        </div>
+    </section>
 </div>
 </body>
 </html>
