added more HTML

--- a/index.html
+++ b/index.html
@@ -88,6 +88,47 @@
             <img src="./images/try.jpg" alt="photo" class="try_image">
         </div>
     </section>
+
+    <section class="join">
+        <h1 class="join_title">Join our growing network</h1>
+        <svg class="join_ico">
+            <use></use>
+        </svg>
+        <div class="join_block">
+            <ul class="join_list">
+                <li class="join_item">
+                    <svg class="join_ico"></svg>
+                    <h3 class="join_sub_title">Start selling</h3>
+                    <p class="join_text">Are you a restaurant owner looking to grow your business? Reach new customers when you join our network.</p>
+                    <a href="" class="join_link">see more</a>
+                    <svg class="join_ico"></svg>
+                    <div class="join_upper_block">
+                        <img src="./images/join1.jpg" alt="photo" class="join_image">
+                    </div>
+                </li>
+                <li class="join_item">
+                    <svg class="join_ico"></svg>
+                    <h3 class="join_sub_title">Deliver happiness</h3>
+                    <p class="join_text">Join our elite league of delivery riders delivering happiness to customers and earn to achieve your dreams while at it.</p>
+                    <a href="" class="join_link">see more</a>
+                    <svg class="join_ico"></svg>
+                    <div class="join_upper_block">
+                        <img src="./images/join2.jpg" alt="photo" class="join_image">
+                    </div>
+                </li>
+                <li class="join_item">
+                    <svg class="join_ico"></svg>
+                    <h3 class="join_sub_title">Behind the scenes</h3>
+                    <p class="join_text">If you are passionate about helping us achieve our goal to deliver meals seamlessly, come join the team.</p>
+                    <a href="" class="join_link">see more</a>
+                    <svg class="join_ico"></svg>
+                    <div class="join_upper_block">
+                        <img src="./images/join3.jpg" alt="photo" class="join_image">
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
 </div>
 </body>
 </html>
