added one more section

--- a/index.html
+++ b/index.html
@@ -129,6 +129,93 @@
             </ul>
         </div>
     </section>
+
+    <section class="explore">
+        <div class="explore_block">
+            <h1 class="explore_title">Explore categories</h1>
+            <svg class="explore_ico">
+                <use></use>
+            </svg>
+        </div>
+        <div class="explore_icons_block">
+            <ul class="explore_list">
+                <li class="explore_item">
+                    <svg class="explore_ico"></svg>
+                </li>
+                <li class="explore_item">
+                    <svg class="explore_ico"></svg>
+                </li>
+                <li class="explore_item">
+                    <svg class="explore_ico"></svg>
+                </li>
+                <li class="explore_item">
+                    <svg class="explore_ico"></svg>
+                </li>
+                <li class="explore_item">
+                    <svg class="explore_ico"></svg>
+                </li>
+            </ul>
+        </div>
+
+        <div class="explore_last_block">
+            <ul class="explore_list">
+                <li class="explore_item">
+                    <svg class="explore_ico"></svg>
+                </li>
+                <li class="explore_item">
+                    <svg class="explore_ico"></svg>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="cover">
+        <div class="cover_block">
+            <h1 class="cover_title">Chowdeck has 
+                you covered</h1>
+            <svg class="cover_ico">
+                <use></use>
+            </svg>
+        </div>
+
+        <div class="cover_text_block">
+            <p class="cover_text">Hungry? Too tired to cook? Have friends over, or do you simply need to chop life? Download Chowdeck, and let’s deliver happiness to your doorstep in minutes.</p>
+        </div>
+
+        <div class="cover_advise">
+            <ul class="cover_list">
+                <li class="cover_item">
+                    <svg class="cover_ico"></svg>
+                    <p class="cover_sub_text">Quick and easy onboarding</p>
+                </li>
+                <li class="cover_item">
+                    <svg class="cover_ico"></svg>
+                    <p class="cover_sub_text">Quality meal choices</p>
+                </li>
+                <li class="cover_item">
+                    <svg class="cover_ico"></svg>
+                    <p class="cover_sub_text">Live updates on orders</p>
+                </li>
+                <li class="cover_item">
+                    <svg class="cover_ico"></svg>
+                    <p class="cover_sub_text">Highly rated riders</p>
+                </li>
+                <li class="cover_item">
+                    <svg class="cover_ico"></svg>
+                    <p class="cover_sub_text">20/7 support for customers and vendors</p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="cover_image_block">
+            <ul class="cover_list">
+                <li class="cover_item"><img src="./images/cover1.jpg" alt="photo" class="cover_image"></li>
+                <li class="cover_item"><img src="./images/cover2.jpg" alt="photo" class="cover_image"></li>
+                <li class="cover_item"><img src="./images/cover3.jpg" alt="photo" class="cover_image"></li>
+                <li class="cover_item"><img src="./images/cover4.jpg" alt="photo" class="cover_image"></li>
+            </ul>
+        </div>
+    </section>
 </div>
 </body>
 </html>
