added some changes

--- a/index.html
+++ b/index.html
@@ -216,6 +216,133 @@
             </ul>
         </div>
     </section>
+
+    <section class="restaurants">
+    <div class="restaurants_left">
+        <img src="./images/location.jpg" alt="photo" class="restaurants_image">
+    </div>
+
+    <div class="restaurants_right">
+        <svg class="restaurants_ico"></svg><h1 class="restaurants_title">Restaurants</h1>
+        <div class="restaurants_location">
+            <ul class="restaurants_list">
+                <li class="restaurants_item">
+                    <a href="" class="restaurants_link">Sweet Sensation</a>
+                    <svg class="restaurants_ico">
+                        <use></use>
+                    </svg>
+                </li>
+                <li class="restaurants_item">
+                    <a href="" class="restaurants_link">Mr Biggs- Agidingbi</a>
+                    <svg class="restaurants_ico">
+                        <use></use>
+                    </svg>
+                </li>
+                <li class="restaurants_item">
+                    <a href="" class="restaurants_link">Magrellos</a>
+                    <svg class="restaurants_ico">
+                        <use></use>
+                    </svg>
+                </li>
+                <li class="restaurants_item">
+                    <a href="" class="restaurants_link">Old English Superstore and Bakery</a>
+                    <svg class="restaurants_ico">
+                        <use></use>
+                    </svg>
+                </li>
+                <li class="restaurants_item">
+                    <a href="" class="restaurants_link">Goodypot foodies enterprises</a>
+                    <svg class="restaurants_ico">
+                        <use></use>
+                    </svg>
+                </li>
+                <li class="restaurants_item">
+                    <a href="" class="restaurants_link">Belle First.Com</a>
+                    <svg class="restaurants_ico">
+                        <use></use>
+                    </svg>
+                </li>
+                <li class="restaurants_item">
+                    <a href="" class="restaurants_link">So Fresh - Ogudu</a>
+                    <svg class="restaurants_ico">
+                        <use></use>
+                    </svg>
+                </li>
+                <li class="restaurants_item">
+                    <a href="" class="restaurants_link">Mr Biggs- Ikoyi</a>
+                    <svg class="restaurants_ico">
+                        <use></use>
+                    </svg>
+                </li>
+            </ul>
+        </div>
+    </div>
+    </section>
+
+    <section class="feedback">
+        <button class="feedback_btn">Street Cred</button>
+        <button class="feedback_btn">Join our community</button>
+        <div class="feedback_block">
+            <ul class="feedback_list">
+                <li class="feedback_item">
+                    <svg class="feedback_ico"></svg>
+                    <h3 class="feedback_title"></h3>
+                    <a href="" class="feedback_link"></a>
+                    <svg class="feedback_ico"></svg>
+                    <p class="feedback_text"></p>
+                </li>
+                <li class="feedback_item">
+                    <svg class="feedback_ico"></svg>
+                    <h3 class="feedback_title"></h3>
+                    <a href="" class="feedback_link"></a>
+                    <svg class="feedback_ico"></svg>
+                    <p class="feedback_text"></p>
+                </li>
+                <li class="feedback_item">
+                    <svg class="feedback_ico"></svg>
+                    <h3 class="feedback_title"></h3>
+                    <a href="" class="feedback_link"></a>
+                    <svg class="feedback_ico"></svg>
+                    <p class="feedback_text"></p>
+                </li>
+                <li class="feedback_item">
+                    <svg class="feedback_ico"></svg>
+                    <h3 class="feedback_title"></h3>
+                    <a href="" class="feedback_link"></a>
+                    <svg class="feedback_ico"></svg>
+                    <p class="feedback_text"></p>
+                </li>
+                <li class="feedback_item">
+                    <svg class="feedback_ico"></svg>
+                    <h3 class="feedback_title"></h3>
+                    <a href="" class="feedback_link"></a>
+                    <svg class="feedback_ico"></svg>
+                    <p class="feedback_text"></p>
+                </li>
+                <li class="feedback_item">
+                    <svg class="feedback_ico"></svg>
+                    <h3 class="feedback_title"></h3>
+                    <a href="" class="feedback_link"></a>
+                    <svg class="feedback_ico"></svg>
+                    <p class="feedback_text"></p>
+                </li>
+                <li class="feedback_item">
+                    <svg class="feedback_ico"></svg>
+                    <h3 class="feedback_title"></h3>
+                    <a href="" class="feedback_link"></a>
+                    <svg class="feedback_ico"></svg>
+                    <p class="feedback_text"></p>
+                </li>
+                <li class="feedback_item">
+                    <svg class="feedback_ico"></svg>
+                    <h3 class="feedback_title"></h3>
+                    <a href="" class="feedback_link"></a>
+                    <svg class="feedback_ico"></svg>
+                    <p class="feedback_text"></p>
+                </li>
+            </ul>
+        </div>
+    </section>
 </div>
 </body>
 </html>
